@@ -1,12 +1,9 @@
 package com.incede.nbfc.core.monolith.masterdata.service;
 
-import com.incede.nbfc.core.monolith.exception.BusinessException;
 import com.incede.nbfc.core.monolith.masterdata.domain.entity.*;
 import com.incede.nbfc.core.monolith.masterdata.dto.*;
 import com.incede.nbfc.core.monolith.masterdata.mapper.*;
 import com.incede.nbfc.core.monolith.masterdata.repository.*;
-import com.incede.nbfc.core.monolith.tenant.domain.entity.Tenant;
-import com.incede.nbfc.core.monolith.tenant.repository.TenantRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -20,7 +17,6 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
@@ -30,428 +26,580 @@ import static org.mockito.Mockito.*;
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class BankMasterDataServiceTest {
 
-    @Mock private BranchContactsRepository branchContactsRepository;
-    @Mock private BranchWeekScheduleRepository branchWeekScheduleRepository;
-    @Mock private BanksRepository banksRepository;
-    @Mock private BranchesRepository branchesRepository;
-    @Mock private AccountStatusesRepository accountStatusesRepository;
-    @Mock private AccountTypeMasterRepository accountTypeMasterRepository;
-    @Mock private CustomerStatusRepository customerStatusRepository;
-    @Mock private BranchesMapper branchesMapper;
-    @Mock private StatesRepository statesRepository;
-    @Mock private StatesMapper statesMapper;
-    @Mock private CountryMapper countryMapper;
-    @Mock private BranchTypeRepository branchTypeRepository;
-    @Mock private BranchTypeMapper branchTypeMapper;
-    @Mock private PostOfficesRepository postOfficesRepository;
-    @Mock private PostOfficeMapper postOfficeMapper;
-    @Mock private CitiesRepository citiesRepository;
-    @Mock private CitiesMapper citiesMapper;
-    @Mock private DistrictRepository districtRepository;
-    @Mock private DistrictMapper districtMapper;
-    @Mock private IfscCodesRepository ifscCodesRepository;
-    @Mock private IfscCodeMapper ifscCodeMapper;
-    @Mock private CustomerCategoryRepository customerCategoryRepository;
-    @Mock private CustomerGroupMasterRepository customerGroupMasterRepository;
-    @Mock private RiskCategoryRepository riskCategoryRepository;
-    @Mock private CountryRepository countryRepository;
-    @Mock private PincodesRepository pincodesRepository;
-    @Mock private TenantRepository tenantRepository;
+    @Mock
+    BranchContactsRepository branchContactsRepository;
+    @Mock
+    BranchWeekScheduleRepository branchWeekScheduleRepository;
+    @Mock
+    BanksRepository banksRepository;
+    @Mock
+    BranchesRepository branchesRepository;
+    @Mock
+    AccountStatusesRepository accountStatusesRepository;
+    @Mock
+    AccountTypeMasterRepository accountTypeMasterRepository;
+    @Mock
+    CustomerStatusRepository customerStatusRepository;
 
-    @InjectMocks private BankMasterDataService bankMasterDataService;
+    @InjectMocks
+    private BankMasterDataService bankMasterDataService;
 
-    private UUID tenantIdentity;
-    private Integer tenantId;
+    @Mock
+    private StatesRepository statesRepository;
+    @Mock
+    private BranchTypeRepository branchTypeRepository;
+    @Mock
+    private PostOfficesRepository postOfficesRepository;
+    @Mock
+    private CitiesRepository citiesRepository;
+    @Mock
+    private DistrictRepository districtRepository;
+    @Mock
+    private PincodesRepository pincodesRepository;
+    @Mock
+    private IfscCodesRepository ifscCodesRepository;
+    @Mock
+    private CountryRepository countryRepository;
+    @Mock
+    private CustomerGroupMasterRepository customerGroupMasterRepository;
+    @Mock
+    private RiskCategoryRepository riskCategoryRepository;
+    @Mock
+    private  CustomerCategoryRepository customerCategoryRepository;
+    @Mock
+    private IfscCodeMapper ifscCodeMapper;
+    @Mock
+    private BranchesMapper branchesMapper;
+    @Mock
+    private StatesMapper statesMapper;
+    @Mock
+    private BranchTypeMapper branchTypeMapper;
+    @Mock
+    private PostOfficeMapper postOfficeMapper;
+    @Mock
+    private CitiesMapper citiesMapper;
+    @Mock
+    private DistrictMapper districtMapper;
+    @Mock
+    private CountryMapper countryMapper;
+
+    private Branches branchEntity;
+
+    private IfscCodes ifscEntity;
+    private IfscCodesDto ifscDto;
+    private Pincodes pincode;
 
     @BeforeEach
     void setUp() {
-        tenantIdentity = UUID.randomUUID();
-        tenantId = 1;
 
-        Tenant tenant = new Tenant();
-        tenant.setTenantId(tenantId);
-        when(tenantRepository.findByIdentity(tenantIdentity)).thenReturn(Optional.of(tenant));
+        branchEntity = new Branches();
+        branchEntity.setBranchId(1);
+        branchEntity.setStateId(10);
+        branchEntity.setBranchTypeId(20);
+        branchEntity.setPostOfficeId(30);
+        branchEntity.setCityId(40);
+        branchEntity.setDistrictId(50);
+
+        ifscEntity = new IfscCodes();
+        ifscEntity.setIfscCode("TEST0001234");
+        ifscEntity.setBranchName("Test Branch");
+        ifscEntity.setPincodeId(101);
+
+        ifscDto = new IfscCodesDto();
+        ifscDto.setIfscCode("TEST0001234");
+        ifscDto.setBranchName("Test Branch");
+
+        pincode = new Pincodes();
+        pincode.setPincodeId(101);
+        pincode.setPincode("673528");
+        branchEntity.setCountryId(1);
     }
 
-    // ------------------- Branch Contact Tests -------------------
-    @Test
-    void testGetAllBranchContact_WithData() {
-        BranchContactView contact = mock(BranchContactView.class);
-        when(branchContactsRepository.findByIsDelFalseByTenataId(tenantId)).thenReturn(List.of(contact));
 
-        List<BranchContactView> result = bankMasterDataService.getAllBranchContact(tenantIdentity);
+    @Test
+    void testGetAllBranchContacts_WhenDataExists() {
+        UUID id = UUID.randomUUID();
+
+        BranchContactView mockView = mock(BranchContactView.class);
+        when(mockView.getValue()).thenReturn("1234567890");
+        when(mockView.getRemarks()).thenReturn("Main contact");
+        when(mockView.getIdentity()).thenReturn(id);
+
+        when(branchContactsRepository.findByIsDelFalse()).thenReturn(List.of(mockView));
+
+        List<BranchContactView> result = bankMasterDataService.getAllBranchContact();
 
         assertNotNull(result);
-        assertEquals(1, result.size());
+        assertEquals(1, result.size(), "Expected exactly 1 branch contact"); // message will show in case of failure
+        assertEquals("1234567890", result.get(0).getValue());
+        assertEquals("Main contact", result.get(0).getRemarks());
+        assertEquals(id, result.get(0).getIdentity());
     }
 
-    @Test
-    void testGetAllBranchContact_Empty() {
-        when(branchContactsRepository.findByIsDelFalseByTenataId(tenantId)).thenReturn(Collections.emptyList());
-
-        List<BranchContactView> result = bankMasterDataService.getAllBranchContact(tenantIdentity);
-
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-    }
 
     @Test
-    void testGetAllBranchContact_ThrowsException() {
-        when(branchContactsRepository.findByIsDelFalseByTenataId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
+    void testGetAllBranchContacts_WhenDataEmpty() {
+        when(branchContactsRepository.findByIsDelFalse()).thenReturn(Collections.emptyList());
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllBranchContact(tenantIdentity));
-        assertEquals("DB error", ex.getMessage());
-    }
-
-    // ------------------- Branch Week Schedule Tests -------------------
-    @Test
-    void testGetAllBranchWeekSchedule_WithData() {
-        BranchWeekScheduleView schedule = mock(BranchWeekScheduleView.class);
-        when(branchWeekScheduleRepository.findByIsDelFalseByTenantId(tenantId)).thenReturn(List.of(schedule));
-
-        List<BranchWeekScheduleView> result = bankMasterDataService.getAllBranchWeekSchedule(tenantIdentity);
-
-        assertNotNull(result);
-        assertEquals(1, result.size());
-    }
-
-    @Test
-    void testGetAllBranchWeekSchedule_Empty() {
-        when(branchWeekScheduleRepository.findByIsDelFalseByTenantId(tenantId)).thenReturn(Collections.emptyList());
-
-        List<BranchWeekScheduleView> result = bankMasterDataService.getAllBranchWeekSchedule(tenantIdentity);
+        List<BranchContactView> result = bankMasterDataService.getAllBranchContact();
 
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
 
     @Test
-    void testGetAllBranchWeekSchedule_ThrowsException() {
-        when(branchWeekScheduleRepository.findByIsDelFalseByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
+    void testGetAllBranchContacts_WhenRepositoryThrowsException() {
+        when(branchContactsRepository.findByIsDelFalse()).thenThrow(new RuntimeException("DB error"));
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllBranchWeekSchedule(tenantIdentity));
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> bankMasterDataService.getAllBranchContact());
+
         assertEquals("DB error", ex.getMessage());
     }
 
-    // ------------------- Banks Tests -------------------
-    @Test
-    void testGetAllBanks_WithData() {
-        BanksView bank = mock(BanksView.class);
-        when(banksRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(List.of(bank));
 
-        List<BanksView> result = bankMasterDataService.getAllBanks(tenantIdentity);
+    @Test
+    void testGetAllBranchWeekSchedules_WhenDataExists() {
+        UUID id = UUID.randomUUID();
+
+        BranchWeekScheduleView mockView = mock(BranchWeekScheduleView.class);
+        when(mockView.getDayOfWeek()).thenReturn((short) 1);
+        when(mockView.getIdentity()).thenReturn(id);
+
+        when(branchWeekScheduleRepository.findByIsDelFalse()).thenReturn(List.of(mockView));
+
+        List<BranchWeekScheduleView> result = bankMasterDataService.getAllBranchWeekSchedule();
 
         assertNotNull(result);
         assertEquals(1, result.size());
+        assertEquals((short) 1, result.get(0).getDayOfWeek());
+        assertEquals(id, result.get(0).getIdentity());
     }
 
     @Test
-    void testGetAllBanks_Empty() {
-        when(banksRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(Collections.emptyList());
+    void testGetAllBranchWeekSchedules_WhenDataEmpty() {
+        when(branchWeekScheduleRepository.findByIsDelFalse()).thenReturn(Collections.emptyList());
 
-        List<BanksView> result = bankMasterDataService.getAllBanks(tenantIdentity);
+        List<BranchWeekScheduleView> result = bankMasterDataService.getAllBranchWeekSchedule();
 
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
 
     @Test
-    void testGetAllBanks_ThrowsException() {
-        when(banksRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
+    void testGetAllBranchWeekSchedules_WhenRepositoryThrowsException() {
+        when(branchWeekScheduleRepository.findByIsDelFalse()).thenThrow(new RuntimeException("DB error"));
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllBanks(tenantIdentity));
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> bankMasterDataService.getAllBranchWeekSchedule());
+
         assertEquals("DB error", ex.getMessage());
     }
 
-    // ------------------- Branches Tests -------------------
     @Test
-    void testGetAllBranches_WithData() {
-        Branches branch = new Branches();
-        branch.setBranchId(1);
-        branch.setStateId(10);
-        branch.setBranchTypeId(20);
-        branch.setPostOfficeId(30);
-        branch.setCityId(40);
-        branch.setDistrictId(50);
-        branch.setCountryId(60);
+    void testGetAllBanks_WhenDataExists() {
+        UUID id = UUID.randomUUID();
 
-        when(branchesRepository.findAllBranchesByIsDelFalseByTenantId(tenantId))
-                .thenReturn(List.of(branch));
+        BanksView mockView = mock(BanksView.class);
+        when(mockView.getName()).thenReturn("State Bank of India");
+        when(mockView.getCode()).thenReturn("SBI");
+        when(mockView.getSwiftBic()).thenReturn("SBININBB");
+        when(mockView.getIdentity()).thenReturn(id);
 
-        // Mock related entities
-        States state = new States(); state.setStateId(10);
-        BranchTypes branchType = new BranchTypes(); branchType.setBranchTypeId(20);
-        PostOffices postOffice = new PostOffices(); postOffice.setPostOfficeId(30);
-        Cities city = new Cities(); city.setCityId(40);
-        Districts district = new Districts(); district.setDistrictId(50);
-        Countries country = new Countries(); country.setCountryId(60);
+        when(banksRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(List.of(mockView));
 
+        List<BanksView> result = bankMasterDataService.getAllBanks();
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("State Bank of India", result.get(0).getName());
+        assertEquals("SBI", result.get(0).getCode());
+        assertEquals("SBININBB", result.get(0).getSwiftBic());
+        assertEquals(id, result.get(0).getIdentity());
+    }
+
+    @Test
+    void testGetAllBanks_WhenDataEmpty() {
+        when(banksRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(Collections.emptyList());
+
+        List<BanksView> result = bankMasterDataService.getAllBanks();
+
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void testGetAllBanks_WhenRepositoryThrowsException() {
+        when(banksRepository.findByIsDelFalseAndIsActiveTrue()).thenThrow(new RuntimeException("DB error"));
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> bankMasterDataService.getAllBanks());
+
+        assertEquals("DB error", ex.getMessage());
+    }
+
+    @Test
+    void testGetAllBranches_WhenDataExists() {
+
+        when(branchesRepository.findAllBranchesByIsDelFalse()).thenReturn(List.of(branchEntity));
+
+        States state = new States();
+        state.setStateId(10);
         when(statesRepository.findByStateIdIn(Set.of(10))).thenReturn(List.of(state));
+
+        BranchTypes branchType = new BranchTypes();
+        branchType.setBranchTypeId(20);
         when(branchTypeRepository.findByBranchTypeIdIn(Set.of(20))).thenReturn(List.of(branchType));
+
+        PostOffices postOffice = new PostOffices();
+        postOffice.setPostOfficeId(30);
         when(postOfficesRepository.findByPostOfficeIdIn(Set.of(30))).thenReturn(List.of(postOffice));
+
+        Cities city = new Cities();
+        city.setCityId(40);
         when(citiesRepository.findByCityIdIn(Set.of(40))).thenReturn(List.of(city));
-        when(districtRepository.findBydistrictIdIn(Set.of(50))).thenReturn(List.of(district));
+
+        Countries country = new Countries();
+        country.setCountryId(60);
         when(countryRepository.findByCountryIdIn(Set.of(60))).thenReturn(List.of(country));
 
-        // DTO mappings
-        BranchesDto branchDto = new BranchesDto(); StatesDto stateDto = new StatesDto();
-        BranchTypeDto branchTypeDto = new BranchTypeDto(); PostOfficesDto postOfficeDto = new PostOfficesDto();
-        CitiesDto cityDto = new CitiesDto(); DistrictDto districtDto = new DistrictDto(); CountryDto countryDto = new CountryDto();
+        Districts district = new Districts();
+        district.setDistrictId(50);
+        when(districtRepository.findBydistrictIdIn(Set.of(50))).thenReturn(List.of(district));
 
-        when(branchesMapper.convertToDto(branch)).thenReturn(branchDto);
+        BranchesDto branchDto = new BranchesDto();
+        when(branchesMapper.convertToDto(branchEntity)).thenReturn(branchDto);
+
+        StatesDto stateDto = new StatesDto();
         when(statesMapper.convertToDto(state)).thenReturn(stateDto);
+
+        BranchTypeDto branchTypeDto = new BranchTypeDto();
         when(branchTypeMapper.convertToDto(branchType)).thenReturn(branchTypeDto);
+
+        PostOfficesDto postOfficeDto = new PostOfficesDto();
         when(postOfficeMapper.convertToDto(postOffice)).thenReturn(postOfficeDto);
+
+        CitiesDto cityDto = new CitiesDto();
         when(citiesMapper.convertToDto(city)).thenReturn(cityDto);
+
+        DistrictDto districtDto = new DistrictDto();
         when(districtMapper.convertToDto(district)).thenReturn(districtDto);
+
+        CountryDto countryDto = new CountryDto();
         when(countryMapper.convertToDto(country)).thenReturn(countryDto);
 
-        List<BranchesDto> result = bankMasterDataService.getAllBranches(tenantIdentity);
+        List<BranchesDto> result = bankMasterDataService.getAllBranches();
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getStateDto()).isSameAs(stateDto);
-        assertThat(result.get(0).getBranchTypeDto()).isSameAs(branchTypeDto);
-        assertThat(result.get(0).getPostOfficesDto()).isSameAs(postOfficeDto);
-        assertThat(result.get(0).getCitiesDto()).isSameAs(cityDto);
-        assertThat(result.get(0).getDistrictDto()).isSameAs(districtDto);
-        assertThat(result.get(0).getCountryDto()).isSameAs(countryDto);
+        assertThat(result).isNotNull();
+        assertThat(result.size()).isEqualTo(1);
+
+        BranchesDto dto = result.get(0);
+        assertThat(dto).isSameAs(branchDto);
+        assertThat(dto.getStateDto()).isSameAs(stateDto);
+        assertThat(dto.getBranchTypeDto()).isSameAs(branchTypeDto);
+        assertThat(dto.getPostOfficesDto()).isSameAs(postOfficeDto);
+        assertThat(dto.getDistrictDto()).isSameAs(districtDto);
+
+    }
+
+
+    @Test
+    void testGetAllBranches_WhenNoBranchesExist() {
+        when(branchesRepository.findAllBranchesByIsDelFalse()).thenReturn(Collections.emptyList());
+
+        List<BranchesDto> result = bankMasterDataService.getAllBranches();
+
+        assertThat(result).isNotNull();
+        assertThat(result).isEmpty();
     }
 
     @Test
-    void testGetAllBranches_Empty() {
-        when(branchesRepository.findAllBranchesByIsDelFalseByTenantId(tenantId))
-                .thenReturn(Collections.emptyList());
+    void testGetAllBranches_WhenRepositoryThrowsException() {
+        when(branchesRepository.findAllBranchesByIsDelFalse()).thenThrow(new RuntimeException("DB error"));
 
-        List<BranchesDto> result = bankMasterDataService.getAllBranches(tenantIdentity);
+        try {
+            bankMasterDataService.getAllBranches();
+        } catch (RuntimeException ex) {
+            assertThat(ex.getMessage()).isEqualTo("DB error");
+        }
+    }
+
+    @Test
+    void testGetAllAccountStatuses_WhenDataExists() {
+        UUID id = UUID.randomUUID();
+
+        AccountStatusesView mockView = mock(AccountStatusesView.class);
+        when(mockView.getName()).thenReturn("Active");
+        when(mockView.getCode()).thenReturn("ACT");
+        when(mockView.getIdentity()).thenReturn(id);
+
+        when(accountStatusesRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(List.of(mockView));
+
+        List<AccountStatusesView> result = bankMasterDataService.getAllAccountStatuses();
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("Active", result.get(0).getName());
+        assertEquals("ACT", result.get(0).getCode());
+        assertEquals(id, result.get(0).getIdentity());
+    }
+
+    @Test
+    void testGetAllAccountStatuses_WhenDataEmpty() {
+        when(accountStatusesRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(Collections.emptyList());
+
+        List<AccountStatusesView> result = bankMasterDataService.getAllAccountStatuses();
 
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
 
     @Test
-    void testGetAllBranches_ThrowsException() {
-        when(branchesRepository.findAllBranchesByIsDelFalseByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
+    void testGetAllAccountStatuses_WhenRepositoryThrowsException() {
+        when(accountStatusesRepository.findByIsDelFalseAndIsActiveTrue()).thenThrow(new RuntimeException("DB error"));
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllBranches(tenantIdentity));
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> bankMasterDataService.getAllAccountStatuses());
+
         assertEquals("DB error", ex.getMessage());
     }
 
-    // ------------------- IFSC Code Tests -------------------
     @Test
-    void testGetAllIfscCodes_WithData() {
-        IfscCodes entity = new IfscCodes(); entity.setIfscCode("IFSC123"); entity.setPincodeId(1); entity.setIdentity(UUID.randomUUID());
-        IfscCodesDto dto = new IfscCodesDto(); dto.setIfscCode("IFSC123"); dto.setPincodes(123456);
-        Pincodes pincode = new Pincodes(); pincode.setPincodeId(1); pincode.setPincode("123456");
+    void testGetAllAccountTypes_WhenDataExists() {
+        UUID id = UUID.randomUUID();
+        AccountTypeMasterView mockView = mock(AccountTypeMasterView.class);
+        when(mockView.getAccountType()).thenReturn("Savings");
+        when(mockView.getIdentity()).thenReturn(id);
 
-        Page<IfscCodes> page = new PageImpl<>(List.of(entity), PageRequest.of(0, 10), 1);
-        when(ifscCodesRepository.findByIsDelFalse(PageRequest.of(0, 10))).thenReturn(page);
-        when(pincodesRepository.findByPincodeIdIn(Set.of(1))).thenReturn(List.of(pincode));
+        when(accountTypeMasterRepository.findByIsDelFalse()).thenReturn(List.of(mockView));
+
+        List<AccountTypeMasterView> result = bankMasterDataService.getAllAccountTypes();
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("Savings", result.get(0).getAccountType());
+        assertEquals(id, result.get(0).getIdentity());
+    }
+
+    @Test
+    void testGetAllAccountTypes_WhenDataEmpty() {
+        when(accountTypeMasterRepository.findByIsDelFalse()).thenReturn(Collections.emptyList());
+
+        List<AccountTypeMasterView> result = bankMasterDataService.getAllAccountTypes();
+
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void testGetAllAccountTypes_WhenRepositoryThrowsException() {
+        when(accountTypeMasterRepository.findByIsDelFalse()).thenThrow(new RuntimeException("DB error"));
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> bankMasterDataService.getAllAccountTypes());
+
+        assertEquals("DB error", ex.getMessage());
+    }
+
+    @Test
+    void testGetAllCustomerStatuses_WhenDataExists() {
+        UUID id = UUID.randomUUID();
+
+        CustomerStatusView mockView = mock(CustomerStatusView.class);
+        when(mockView.getStatusName()).thenReturn("Active");
+        when(mockView.getIsActive()).thenReturn(true);
+        when(mockView.getIdentity()).thenReturn(id);
+
+        when(customerStatusRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(List.of(mockView));
+
+        List<CustomerStatusView> result = bankMasterDataService.getAllCustomerStatuses();
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("Active", result.get(0).getStatusName());
+        assertTrue(result.get(0).getIsActive());
+        assertEquals(id, result.get(0).getIdentity());
+    }
+
+    @Test
+    void testGetAllCustomerStatuses_WhenDataEmpty() {
+        when(customerStatusRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(Collections.emptyList());
+
+        List<CustomerStatusView> result = bankMasterDataService.getAllCustomerStatuses();
+
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    void testGetAllCustomerStatuses_WhenRepositoryThrowsException() {
+        when(customerStatusRepository.findByIsDelFalseAndIsActiveTrue()).thenThrow(new RuntimeException("DB error"));
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> bankMasterDataService.getAllCustomerStatuses());
+
+        assertEquals("DB error", ex.getMessage());
+    }
+
+    @Test
+    void testGetAllCustomerGroups_withData() {
+        CustomerGroupMasterView mockView = mock(CustomerGroupMasterView.class);
+        when(mockView.getCustomerGroup()).thenReturn("Retail");
+        when(mockView.getCode()).thenReturn("RET");
+        when(mockView.getIdentity()).thenReturn(UUID.randomUUID());
+
+        List<CustomerGroupMasterView> mockList = List.of(mockView);
+        when(customerGroupMasterRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(mockList);
+
+        List<CustomerGroupMasterView> result = bankMasterDataService.getAllCustomerGroups();
+
+        assertThat(result).hasSize(1);
+        assertThat(result.get(0).getCustomerGroup()).isEqualTo("Retail");
+        assertThat(result.get(0).getCode()).isEqualTo("RET");
+    }
+
+    @Test
+    void testGetAllCustomerGroups_empty() {
+        when(customerGroupMasterRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(List.of());
+
+        List<CustomerGroupMasterView> result = bankMasterDataService.getAllCustomerGroups();
+
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void testGetCustomerCategoryView_WhenDataExists() {
+        UUID id = UUID.randomUUID();
+
+        CustomerCategoryView mockView = mock(CustomerCategoryView.class);
+        when(mockView.getCategoryName()).thenReturn("Retail");
+        when(mockView.getIdentity()).thenReturn(id);
+
+        when(customerCategoryRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(List.of(mockView));
+
+        List<CustomerCategoryView> result = bankMasterDataService.getCustomerCategoryView();
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("Retail", result.get(0).getCategoryName());
+        assertEquals(id, result.get(0).getIdentity());
+    }
+
+    @Test
+    void testGetCustomerCategoryView_WhenDataEmpty() {
+        when(customerCategoryRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(Collections.emptyList());
+
+        List<CustomerCategoryView> result = bankMasterDataService.getCustomerCategoryView();
+
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+    }
+    @Test
+    void testGetCustomerCategoryView_WhenRepositoryThrowsException() {
+        when(customerCategoryRepository.findByIsDelFalseAndIsActiveTrue())
+                .thenThrow(new RuntimeException("DB error"));
+
+        RuntimeException ex = assertThrows(RuntimeException.class, () ->
+                bankMasterDataService.getCustomerCategoryView());
+
+        assertEquals("DB error", ex.getMessage());
+    }
+
+
+
+    @Test
+    void testGetAllRiskCategories_withData() {
+        RiskCategoryView mockView = mock(RiskCategoryView.class);
+        when(mockView.getCategory()).thenReturn("High Risk");
+        when(mockView.getCode()).thenReturn("HRISK");
+        when(mockView.getIdentity()).thenReturn(UUID.randomUUID());
+
+        List<RiskCategoryView> mockList = List.of(mockView);
+        when(riskCategoryRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(mockList);
+
+        List<RiskCategoryView> result = bankMasterDataService.getAllRiskCategories();
+
+        assertThat(result).hasSize(1);
+        assertThat(result.get(0).getCategory()).isEqualTo("High Risk");
+        assertThat(result.get(0).getCode()).isEqualTo("HRISK");
+    }
+
+    @Test
+    void testGetAllRiskCategories_empty() {
+        when(riskCategoryRepository.findByIsDelFalseAndIsActiveTrue()).thenReturn(List.of());
+
+        List<RiskCategoryView> result = bankMasterDataService.getAllRiskCategories();
+
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void testGetIfscCodeDetails_success() {
+        String ifscCode = "SBIN0001234";
+
+        Banks bank = new Banks();
+        bank.setName("State Bank of India");
+
+        IfscCodes entity = new IfscCodes();
+        entity.setIfscCode(ifscCode);
+        entity.setBank(bank);
+        entity.setBranchName("MG Road");
+        entity.setPincodeId(101);
+        entity.setIdentity(UUID.randomUUID());
+
+        Pincodes pincode = new Pincodes();
+        pincode.setPincodeId(101);
+        pincode.setPincode("682016");
+
+        IfscCodesDto dto = IfscCodesDto.builder()
+                .ifscCode(ifscCode)
+                .bankName(bank.getName())
+                .branchName(entity.getBranchName())
+                .pincodes(Integer.valueOf(pincode.getPincode()))
+                .identity(entity.getIdentity())
+                .build();
+
+        when(ifscCodesRepository.findByIfscCodeAndIsDelFalse(ifscCode)).thenReturn(Optional.of(entity));
+        when(pincodesRepository.findById(101)).thenReturn(Optional.of(pincode));
         when(ifscCodeMapper.convertToDto(entity)).thenReturn(dto);
 
+        IfscCodesDto result = bankMasterDataService.getIfscCodeDetails(ifscCode);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getBankName()).isEqualTo("State Bank of India");
+        assertThat(result.getPincodes()).isEqualTo(682016);
+        verify(pincodesRepository).findById(101);
+    }
+
+    @Test
+    void testGetAllIfscCodes_WithPagination() {
+        IfscCodes mockEntity = new IfscCodes();
+        mockEntity.setIfscCode("SBIN0016400");
+        mockEntity.setBranchName("Main Branch");
+        mockEntity.setBranchPlace("Kochi");
+        mockEntity.setRbiFlag(true);
+        mockEntity.setIsActive(true);
+        mockEntity.setPincodeId(1);
+        mockEntity.setIdentity(UUID.randomUUID());
+
+        IfscCodesDto mockDto = new IfscCodesDto();
+        mockDto.setIfscCode("SBIN0016400");
+        mockDto.setBranchName("Main Branch");
+        mockDto.setBranchPlace("Kochi");
+        mockDto.setRbiFlag(true);
+        mockDto.setIsActive(true);
+        mockDto.setIdentity(mockEntity.getIdentity());
+        mockDto.setPincodes(682031);
+
+        Pincodes mockPincode = new Pincodes();
+        mockPincode.setPincodeId(1);
+        mockPincode.setPincode("682031");
+
+        Page<IfscCodes> mockPage = new PageImpl<>(List.of(mockEntity), PageRequest.of(0, 10), 1);
+        when(ifscCodesRepository.findByIsDelFalse(PageRequest.of(0, 10))).thenReturn(mockPage);
+        when(pincodesRepository.findByPincodeIdIn(Set.of(1))).thenReturn(List.of(mockPincode));
+        when(ifscCodeMapper.convertToDto(mockEntity)).thenReturn(mockDto);
+
         Page<IfscCodesDto> result = bankMasterDataService.getAllIfscCodes(PageRequest.of(0, 10));
-        assertThat(result.getContent().get(0).getPincodes()).isEqualTo(123456);
+
+        assertNotNull(result);
+        assertEquals(1, result.getTotalElements());
+        assertEquals("SBIN0016400", result.getContent().get(0).getIfscCode());
+        assertEquals(682031, result.getContent().get(0).getPincodes());
     }
 
-    @Test
-    void testGetAllIfscCodes_Empty() {
-        Page<IfscCodes> page = new PageImpl<>(Collections.emptyList());
-        when(ifscCodesRepository.findByIsDelFalse(PageRequest.of(0, 10))).thenReturn(page);
-
-        Page<IfscCodesDto> result = bankMasterDataService.getAllIfscCodes(PageRequest.of(0, 10));
-        assertThat(result.getContent()).isEmpty();
-    }
-
-    @Test
-    void testGetIfscCodeDetails_Found() {
-        IfscCodes entity = new IfscCodes(); entity.setIfscCode("IFSC123"); entity.setPincodeId(1);
-        Banks bank = new Banks(); bank.setName("Bank"); entity.setBank(bank);
-        Pincodes pincode = new Pincodes(); pincode.setPincodeId(1); pincode.setPincode("123456");
-        IfscCodesDto dto = new IfscCodesDto(); dto.setIfscCode("IFSC123");
-
-        when(ifscCodesRepository.findByIfscCodeAndIsDelFalse("IFSC123")).thenReturn(Optional.of(entity));
-        when(pincodesRepository.findById(1)).thenReturn(Optional.of(pincode));
-        when(ifscCodeMapper.convertToDto(entity)).thenReturn(dto);
-
-        IfscCodesDto result = bankMasterDataService.getIfscCodeDetails("IFSC123");
-        assertThat(result.getBankName()).isEqualTo("Bank");
-        assertThat(result.getPincodes()).isEqualTo(123456);
-    }
-
-    @Test
-    void testGetIfscCodeDetails_NotFound() {
-        when(ifscCodesRepository.findByIfscCodeAndIsDelFalse("IFSC123")).thenReturn(Optional.empty());
-        assertNull(bankMasterDataService.getIfscCodeDetails("IFSC123"));
-    }
-
-    // ------------------- Account Types -------------------
-    @Test
-    void testGetAllAccountTypes_WithData() {
-        AccountTypeMasterView view = mock(AccountTypeMasterView.class);
-        when(accountTypeMasterRepository.findAllByTenantIdOrAll(tenantId)).thenReturn(List.of(view));
-
-        List<AccountTypeMasterView> result = bankMasterDataService.getAllAccountTypes(tenantIdentity);
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void testGetAllAccountTypes_Empty() {
-        when(accountTypeMasterRepository.findAllByTenantIdOrAll(tenantId)).thenReturn(Collections.emptyList());
-
-        List<AccountTypeMasterView> result = bankMasterDataService.getAllAccountTypes(tenantIdentity);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testGetAllAccountTypes_ThrowsException() {
-        when(accountTypeMasterRepository.findAllByTenantIdOrAll(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllAccountTypes(tenantIdentity));
-        assertEquals("DB error", ex.getMessage());
-    }
-
-    // ------------------- Account Status -------------------
-    @Test
-    void testGetAllAccountStatuses_WithData() {
-        AccountStatusesView view = mock(AccountStatusesView.class);
-        when(accountStatusesRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(List.of(view));
-
-        List<AccountStatusesView> result = bankMasterDataService.getAllAccountStatuses(tenantIdentity);
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void testGetAllAccountStatuses_Empty() {
-        when(accountStatusesRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(Collections.emptyList());
-        List<AccountStatusesView> result = bankMasterDataService.getAllAccountStatuses(tenantIdentity);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testGetAllAccountStatuses_ThrowsException() {
-        when(accountStatusesRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllAccountStatuses(tenantIdentity));
-        assertEquals("DB error", ex.getMessage());
-    }
-
-    // ------------------- Customer Status -------------------
-    @Test
-    void testGetAllCustomerStatuses_WithData() {
-        CustomerStatusView view = mock(CustomerStatusView.class);
-        when(customerStatusRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(List.of(view));
-
-        List<CustomerStatusView> result = bankMasterDataService.getAllCustomerStatuses(tenantIdentity);
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void testGetAllCustomerStatuses_Empty() {
-        when(customerStatusRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(Collections.emptyList());
-        List<CustomerStatusView> result = bankMasterDataService.getAllCustomerStatuses(tenantIdentity);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testGetAllCustomerStatuses_ThrowsException() {
-        when(customerStatusRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllCustomerStatuses(tenantIdentity));
-        assertEquals("DB error", ex.getMessage());
-    }
-
-    // ------------------- Customer Categories -------------------
-    @Test
-    void testGetCustomerCategoryView_WithData() {
-        CustomerCategoryView view = mock(CustomerCategoryView.class);
-        when(customerCategoryRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(List.of(view));
-
-        List<CustomerCategoryView> result = bankMasterDataService.getCustomerCategoryView(tenantIdentity);
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void testGetCustomerCategoryView_Empty() {
-        when(customerCategoryRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(Collections.emptyList());
-
-        List<CustomerCategoryView> result = bankMasterDataService.getCustomerCategoryView(tenantIdentity);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testGetCustomerCategoryView_ThrowsException() {
-        when(customerCategoryRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getCustomerCategoryView(tenantIdentity));
-        assertEquals("DB error", ex.getMessage());
-    }
-
-    // ------------------- Customer Groups -------------------
-    @Test
-    void testGetAllCustomerGroups_WithData() {
-        CustomerGroupMasterView view = mock(CustomerGroupMasterView.class);
-        when(customerGroupMasterRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(List.of(view));
-
-        List<CustomerGroupMasterView> result = bankMasterDataService.getAllCustomerGroups(tenantIdentity);
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void testGetAllCustomerGroups_Empty() {
-        when(customerGroupMasterRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(Collections.emptyList());
-
-        List<CustomerGroupMasterView> result = bankMasterDataService.getAllCustomerGroups(tenantIdentity);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testGetAllCustomerGroups_ThrowsException() {
-        when(customerGroupMasterRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllCustomerGroups(tenantIdentity));
-        assertEquals("DB error", ex.getMessage());
-    }
-
-    // ------------------- Risk Categories -------------------
-    @Test
-    void testGetAllRiskCategories_WithData() {
-        RiskCategoryView view = mock(RiskCategoryView.class);
-        when(riskCategoryRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(List.of(view));
-
-        List<RiskCategoryView> result = bankMasterDataService.getAllRiskCategories(tenantIdentity);
-        assertThat(result).hasSize(1);
-    }
-
-    @Test
-    void testGetAllRiskCategories_Empty() {
-        when(riskCategoryRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId)).thenReturn(Collections.emptyList());
-
-        List<RiskCategoryView> result = bankMasterDataService.getAllRiskCategories(tenantIdentity);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testGetAllRiskCategories_ThrowsException() {
-        when(riskCategoryRepository.findByIsDelFalseAndIsActiveTrueByTenantId(tenantId))
-                .thenThrow(new RuntimeException("DB error"));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> bankMasterDataService.getAllRiskCategories(tenantIdentity));
-        assertEquals("DB error", ex.getMessage());
-    }
 }
